unpackaged/main/default/objects/ia_crm__Other_Sales_Document_Item__c/ia_crm__Other_Sales_Document_Item__c.object-meta.xml
<CustomObject>
    <label>Other Sales Document Item</label>
    <nameField>
        <label>Line No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Sales Document Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>