unpackaged/main/default/objects/ia_crm__Other_Sales_Document_Item__c/fields/ia_crm__Department__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Department__c</fullName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>