unpackaged/main/default/objects/ia_crm__Other_Sales_Document_Item__c/fields/ia_crm__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Other Sales Document Items</relationshipLabel>
    <relationshipName>R00N40000001bdoXEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>