unpackaged/main/default/objects/ia_crm__Other_Sales_Document_Item__c/fields/ia_crm__Price__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>