unpackaged/main/default/objects/ia_crm__Other_Sales_Document_Item__c/fields/ia_crm__Renewal_Template__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_Template__c</fullName>
    <label>Renewal Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>