unpackaged/main/default/objects/ia_crm__Other_Sales_Document_Item__c/fields/ia_crm__Ship_To__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Other Sales Document Items</relationshipLabel>
    <relationshipName>Other_Sales_Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>